@@ -1,0 +1,24 @@
+package com.twitter.util;
+
+import scala.runtime.BoxedUnit;
+
+import org.junit.Test;
+
+public class ClosableOnceCompilationTest {
+
+  private static class ClosableOnceImpl extends AbstractClosableOnce {
+
+    public int closeCount;
+
+    @Override
+    public Future<BoxedUnit> doClose(Time deadline) {
+      closeCount++;
+      return Future.Done();
+    }
+  }
+
+  @Test
+  public void closesOnce() {
+    new ClosableOnceImpl();
+  }
+}
